[metadata]
name = txZMQ-ng
author = Andrey Smirnov
author_email = me@smira.ru
maintainer = William Barnhart
maintainer_email = williambbarnhart@gmail.com
description = Twisted bindings for ZeroMQ
long_description = file: README.rst
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Topic :: Software Development :: Libraries
download_url = https://pypi.org/project/txZMQ-ng/

[options]
install_requires =
    Twisted>=10.0
    pyzmq>=13
